Updates from Overleaf

--- a/methods.tex
+++ b/methods.tex
@@ -1,15 +1,17 @@
 \section{Methods and materials}
 \label{sec:methods}
 
+Data and source code for analyses and plots are available in a Github repository at: \url{https://github.com/ew282d-evangelista/ew282d-sp2020-0451-trombetta}.
+
 \subsection{Experimental subject}
-I used a single experimental subject, age \SI{19}{\year}, male, height \SI{5}{\foot} \SI{8}{\inch} (\SI{1.73}{\meter}), mass \SI{160}{\pound} (\SI{72.6}{\kilo\gram}) \textbf{FIX}. For this subject, measured hip height from the ground was \SI{0.88}{\meter} \textbf{FIX}. For scale purposes, the subject shoe size was US9.5M, heel to toe length \SI{0.30}{\meter} \textbf{FIX}. During running trials, the subject wore physical training  gear consisting of running shorts, a tshirt, and athletic shoes (Lunarlite; Nike, Beaverton, OR) \textbf{FIX} with high contrast black uppers and a white sole and heel that aided in manual digitization. The subject was in good physical condition, having completed his first year as a midshipman at the US Naval Academy, including its renowned Physical Education Program. The subject provided his informed consent before measurements\footnote{This pilot study was conducted under the following exemption: The project in EW282D is designed to teach research methods through student interaction with data about individuals. Student class assignments typically do not meet the federal regulatory definition of research, thus do not require IRB application, approval, or oversight.}.  
+I used a single experimental subject, age \SI{19}{\year}, male, height \SI{5}{\foot} \SI{10}{\inch} (\SI{1.78}{\meter}), mass \SI{150}{\pound} (\SI{68.0}{\kilo\gram}). For this subject, measured hip height from the ground was \SI{36}{\inch} (\SI{0.91}{\meter}). For scale purposes, the subject shoe size was US9.5M, heel to toe length \SI{0.30}{\meter}. During running trials, the subject wore physical training gear consisting of running shorts, a tshirt, white ankle socks, and athletic shoes (Lunarlite; Nike, Beaverton, OR) \textbf{FIX} with high contrast black uppers and a white sole and heel that aided in manual digitization. The subject was in good physical condition, having completed his first year as a midshipman at the US Naval Academy, including its renowned Physical Education Program. The subject provided his informed consent before measurements\footnote{This pilot study was conducted under the following exemption: The project in EW282D is designed to teach research methods through student interaction with data about individuals. Student class assignments typically do not meet the federal regulatory definition of research, thus do not require institutional review board application, approval, or oversight.}.  
 
 \textbf{How was subject trained to do heel strike versus toe strike (foot strike) running styles?}
 
 
 
 \subsection{Improvised force plate kymograph}
-To measure horizontal and vertical ground reaction forces (GRFs), I originally intended to use a three-axis force plate (9260AA6; Kistler; Novi, MI), however, due to the global COVID-19 pandemic, the equipment was not available. Instead, I improvised a one-axis (vertical only) force plate (\fref{fig:methods:forceplate}) using a flexure made of a \SI{48 x 24 x 0.3125}{\inch} \textbf{FIX} sheet of scrap bead board simply supported at the ends between two bricks. I attached a red dry erase marker (EXPO; Newell Brands; Atlanta, GA) horizontally, pointing laterally, at the midpoint of the flexure, so that the marker would mark a \SI{11x16}{\inch} whiteboard (Office Depot, Union, NJ))on the right side. The lowest point reached by the marker is a measure of the maximum vertical GRF experienced during contact. Additionally, I found that horizontal GRF would displace the flexure horizontally, providing some indication of their general magnitude. \textbf{Add refs to Malet etc, Denny.}
+To measure horizontal and vertical ground reaction forces (GRFs), I originally intended to use a three-axis force plate (9260AA6; Kistler; Novi, MI), however, due to the global COVID-19 pandemic, the equipment was not available. Instead, I improvised a one-axis (vertical only) force plate (\fref{fig:methods:forceplate}) using a flexure made of a \SI{48 x 21 x 0.5}{\inch} sheet of scrap bead board simply supported at the ends between two masonry pavers each \SI{2.25}{\inch} thick. I attached a red dry erase marker (EXPO; Newell Brands; Atlanta, GA) horizontally, pointing laterally, at the midpoint of the flexure, so that the marker would mark a \SI{11x14}{\inch} whiteboard (Staples; Riverdale, NJ) on the right side. The lowest point reached by the marker is a measure of the maximum vertical GRF experienced during contact. Additionally, I found that horizontal GRF would displace the flexure horizontally, providing some indication of their general magnitude. \textbf{Add refs to Malet etc, Denny.}
 \begin{figure}
 \begin{center}
     \textbf{Fill in.}
@@ -18,27 +20,31 @@ To measure horizontal and vertical ground reaction forces (GRFs), I originally i
 \label{fig:methods:forceplate}
 \end{figure}
 
-\textbf{How many steps and in what order.} After each trial, the resulting marker pattern on the white board was photographed using a smartphone camera (S8; Samsung; Seoul, South Korea) \textbf{FIX} to allow rough comparison of the magnitude of vertical GRF. 
+\textbf{How many steps and in what order.} After each trial, the resulting marker pattern on the white board was photographed using a smartphone camera (Iphone 11; Apple; Cupertino, CA) to allow rough comparison of the magnitude of vertical GRF. 
 
 
 
 \subsection{Measurement of accelerations using a smart phone}
-In addition to the rough indication of vertical GRF from the improvised force plate, I measured accelerations in three axes using the same smartphone (S8; Samsung; Seoul, South Korea) \textbf{FIX}, centered \SI{10}{\centi\meter} below the navel and taped using \SI{2}{\inch} duct tape (Home Depot; Closter, NJ) \textbf{FIX}. I used the \Matlab\ Mobile app (Mathworks; Natick, MA) to log (STUFF) for \SI{20}{\second} segments of steady running using each running style. To avoid end effects during start and stop, I used the middle \SI{10}{\second} segment of each recording for analyses of the acceleration of the center of mass. 
-\begin{figure}
-\begin{center}
-    \textbf{Fill in.}
-\end{center}
-\caption{Need a photo of a phone taped to a guy's belly}
-\label{fig:methods:accel}
-\end{figure}
+In addition to the rough indication of vertical GRF from the improvised force plate, I measured accelerations in three axes using a smartphone (iPhone 5s; Apple; Cupertino, CA), centered \SI{10}{\centi\meter} below the navel and held in place with the right hand. I used the \Matlab\ Mobile app (Mathworks; Natick, MA) to log $X$, $Y$, and $Z$ acceleration at a sampling rate of \SI{100}{\hertz}.  Running was conducted moving straight and level on an empty street about two blocks in length. I recorded \SI{45}{\second} samples of steady running using each running style, at a cadence of approximately \SI{150}{steps\per\minute}, timed using the Avril Lavigne song ``Sk8er Boi''. To avoid end effects during start and stop, I used the middle \SI{10}{\second} segment of each recording for analyses of the acceleration of the center of mass. Analysis of the vertical ($Y$) acceleration measurements was carried out \Matlab (Mathworks; Natick, MA) and R \cite{r2020}, including the \lstinline{tidyverse} and \lstinline{ggplot2} libraries \citep{wickham2019tidyverse}. 
 
 
 
 \subsection{Video kinematics on a treadmill}
-To examine changes in kinematics and gait during the different running styles, I filmed the subject running on a treadmill (Performance 800; TRUE Fitness; St Louis, MO). Ideally I would have used a high speed camera (TS5; Fastec; San Diego, CA), however, COVID-19 required me to improvise. Instead, I used a smartphone camera (S8; Samsung; Seoul, South Korea) filming from the left at \SI{1}{\meter} \textbf{FIX}. The camera operated at \SI{30}{\frame\per\second} and \num{1920x1080} pixel resolution. Two segments were obtained for analysis, \SI{11}{\second} and \SI{13}{\second} in length, for heel-strike and toe-strike styles, respectively.
+To examine changes in kinematics and gait during the different running styles, I filmed the subject running on a treadmill (Performance 800; TRUE Fitness; St Louis, MO). Ideally I would have used a high speed camera (TS5; Fastec; San Diego, CA), however, COVID-19 required me to improvise. Instead, I used a smartphone camera (iPhone 11; Apple; Cupertino, CA) filming from the left at \SI{1}{\meter} \textbf{FIX}. The camera operated at \SI{30}{\frame\per\second} and \num{1920x1080} pixel resolution. The treadmill was operated at \SI{8}{mph} (\SI{3.6}{\meter\per\second}) for both tests; the subject began running on the treadmill and reached a steady pace before filming.  Two segments were obtained for analysis, \SI{11}{\second} and \SI{13}{\second} in length, for heel-strike and toe-strike styles, providing \SI{358}{\frame} and \SI{416}{\frame}, respectively.
 \begin{figure}
+\begin{center}
+    \textbf{Fill in.}
+\end{center}
 \caption{Need a figure of example setup, points digitized, and maybe angles annotated.}
 \label{fig:methods:kinematics}
 \end{figure}
 
-\textbf{Kinematic analysis... cite Hedrick... cite Revzen. How get joint angles. How judge start of contact phase, end of contact phase. What speed ran treadmill at. etc}
+Kinematic analysis proceeded using \citet{hedrick2008software} DLTdv8 (\url{http://biomech.web.unc.edu/dltdv/}) to manually digitize six points (\fref{fig:methods:kinematics}) in each frame of video: (1) left toe at the front of the white sole; (2) left heel at the back of the white sole; (3) left ankle at the lateral malleolus as judged by white ankle socks worn by the subject; (4) left knee as judged by the bump from the lateral condyles of the femur and tibia; (5) left hip as judged from a faint stripe marking on the subject's athletic shorts. In addition, a sixth point, the right toe, was also digitized in order to confirm that the left-right phase was \ang{90}. 
+
+Specially written code in \Matlab\ was used to convert the digitized point locations into the joint angles depicted in \fref{fig:methods:kinematics}. Foot angle ($\alpha$) was defined with \ang{0} as anatomically neutral position, positive $\alpha$ as dorsiflexion, and negative $\alpha$ as plantar flexion. The knee angle ($\beta$) was defined with \ang{0} as anatomically neutral position, and positive $\beta$ as knee flexion. Hip angle ($\gamma$) was defined with \ang{0} as anatomically neutral position, positive $\gamma$ as flexion, and negative $\gamma$ as extension. 
+
+In addition to joint angle, phase was recovered using a method based on the Phaser algorithm \citep{revzen2008estimating}, by taking the principal component analysis (PCA) of all the six digitized points' $x$ and $y$ coordinates, then finding the phase angle of the Hilbert transform of the first principal component (PC1). The phase was then adjusted to range from 0 to $2\pi$, with 0 phase corresponding to the beginning of the first recorded stance phase. This allows comparison of each of the \textbf{FILLIN} and \textbf{FILLIN} steps in the heel-strike and toe-strike analysis videos, respectively. Phase calculations were carried out in \Matlab\ and made use of the \lstinline{pca} and \lstinline{hilbert} functions. 
+
+To allow for comparison of stride frequency, stride period, and duty cycle, the videos were reviewed frame by frame in DLTdv8 to identify (1) the start of stance phase based on toe or heel contact; (2) end of stance phase judged by toe liftoff; and (3) toe contact (for heel-strike trials) to aid in length and speed calibration.  For heel-strike analysis, start of stance was judged by heel-strike and rapid foot plantar flexion in contact with the ground; for toe-strike analysis, start of stance was judged by observing when the toe struck the ground during plantar flexion. Additional plotting and statistical analyses were completed in \Matlab\ and R \citep{r2020}. 
+
+
