--- a/trombetta.bib
+++ b/trombetta.bib
@@ -28,3 +28,45 @@ journal={Nature},
 volume={463},
 pages={531--535},
 doi={10.138/nature08723}}
+
+@article{hedrick2008software,
+author={Hedrick, Tyson L},
+year={2008},
+title={Software techniques for two- and three-dimensional kinematic measurements of biological and biomimetic systems},
+journal={Bioinspiration \& Biomimetics},
+volume={3},
+pages={034001},
+doi={10.1088/1748-3182/3/3/034001}
+}
+
+@article{wickham2019tidyverse,
+title = {Welcome to the {tidyverse}},
+author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain Fran{\c{c}}ois and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill M{\:{u}}ller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+year = {2019},
+journal = {Journal of Open Source Software},
+volume = {4},
+number = {43},
+pages = {1686},
+doi = {10.21105/joss.01686},
+}
+   
+
+@Manual{r2020,
+title = {R: A Language and Environment for Statistical Computing},
+author = {{R Core Team}},
+organization = {R Foundation for Statistical Computing},
+address = {Vienna, Austria},
+year = {2020},
+url = {https://www.R-project.org/},
+}
+
+@article{revzen2008estimating,
+  title = {Estimating the phase of synchronized oscillators},
+  author = {Revzen, Shai and Guckenheimer, John M.},
+  journal = {Phys. Rev. E},
+  volume = {78},
+  issue = {5},
+  pages = {051907},
+  year = {2008},
+  doi = {10.1103/PhysRevE.78.051907},
+}
