--- a/methods.tex
+++ b/methods.tex
@@ -11,7 +11,7 @@ I used a single experimental subject, age \SI{19}{\year}, male, height \SI{5}{\f
 
 
 \subsection{Improvised force plate kymograph}
-To measure horizontal and vertical ground reaction forces (GRFs), I originally intended to use a three-axis force plate (9260AA6; Kistler; Novi, MI), however, due to the global COVID-19 pandemic, the equipment was not available. Instead, I improvised a one-axis (vertical only) force plate (\fref{fig:methods:forceplate}) using a flexure made of a \SI{48 x 21 x 0.5}{\inch} sheet of scrap bead board simply supported at the ends between two masonry pavers each \SI{2.25}{\inch} thick. I attached a red dry erase marker (EXPO; Newell Brands; Atlanta, GA) horizontally, pointing laterally, at the midpoint of the flexure, so that the marker would mark a \SI{11x14}{\inch} whiteboard (Staples; Riverdale, NJ) on the right side. The lowest point reached by the marker is a measure of the maximum vertical GRF experienced during contact. Additionally, I found that horizontal GRF would displace the flexure horizontally, providing some indication of their general magnitude. \textbf{Add refs to Malet etc, Denny.}
+To measure horizontal and vertical ground reaction forces (GRFs), I originally intended to use a three-axis force plate (9260AA6; Kistler; Novi, MI), however, due to the global COVID-19 pandemic, the equipment was not available. Instead, I improvised a one-axis (vertical only) force plate (\fref{fig:methods:forceplate}) using a flexure made of a \SI{48 x 21 x 0.5}{\inch} sheet of scrap bead board simply supported at the ends between two masonry pavers each \SI{2.25}{\inch} thick. I attached a red dry erase marker (EXPO; Newell Brands; Atlanta, GA) horizontally, pointing laterally, at the midpoint of the flexure, so that the marker would mark a \SI{11x14}{\inch} whiteboard (Staples; Riverdale, NJ) on the right side. 
 \begin{figure}
 \begin{center}
     \textbf{Fill in.}
@@ -19,6 +19,12 @@ To measure horizontal and vertical ground reaction forces (GRFs), I originally i
 \caption{Improvised one-axis force plate kymograph}
 \label{fig:methods:forceplate}
 \end{figure}
+The lowest point reached by the marker is a linear measure of the maximum vertical GRF experienced during contact. Additionally, I found that horizontal GRF would displace the flexure horizontally, providing some indication of their general magnitude. \textbf{Add refs to Malet etc, Denny.} For a point load applied in the middle, the displacement $\delta$ (i.e. marker movement) from point load $F$ (i.e. vertical GRF) is given by: % ADD CITATION
+\begin{equation}
+\delta = \frac{FL^3}{48 EI},
+\label{eq:sensor-response}
+\end{equation}
+where $E$ is Young's modulus of elasticity, $L$ is the length of the beam, and $I=\frac{1}{12}bh^3$ is the second moment of area; though in practice I simply compared the maximum marker motion rather than perform a detailed calibration of this improvised rig. 
 
 \textbf{How many steps and in what order.} After each trial, the resulting marker pattern on the white board was photographed using a smartphone camera (Iphone 11; Apple; Cupertino, CA) to allow rough comparison of the magnitude of vertical GRF. 
 
@@ -45,6 +51,6 @@ Specially written code in \Matlab\ was used to convert the digitized point locat
 
 In addition to joint angle, phase was recovered using a method based on the Phaser algorithm \citep{revzen2008estimating}, by taking the principal component analysis (PCA) of all the six digitized points' $x$ and $y$ coordinates, then finding the phase angle of the Hilbert transform of the first principal component (PC1). The phase was then adjusted to range from 0 to $2\pi$, with 0 phase corresponding to the beginning of the first recorded stance phase. This allows comparison of each of the \textbf{FILLIN} and \textbf{FILLIN} steps in the heel-strike and toe-strike analysis videos, respectively. Phase calculations were carried out in \Matlab\ and made use of the \lstinline{pca} and \lstinline{hilbert} functions. 
 
-To allow for comparison of stride frequency, stride period, and duty cycle, the videos were reviewed frame by frame in DLTdv8 to identify (1) the start of stance phase based on toe or heel contact; (2) end of stance phase judged by toe liftoff; and (3) toe contact (for heel-strike trials) to aid in length and speed calibration.  For heel-strike analysis, start of stance was judged by heel-strike and rapid foot plantar flexion in contact with the ground; for toe-strike analysis, start of stance was judged by observing when the toe struck the ground during plantar flexion. Additional plotting and statistical analyses were completed in \Matlab\ and R \citep{r2020}. 
+To allow for comparison of stride frequency, stride period, and duty cycle, the videos were reviewed frame by frame in DLTdv8 to identify (1) the start of stance phase based on toe or heel contact; (2) end of stance phase judged by toe liftoff; and (3) toe contact (for heel-strike trials) to aid in length and speed calibration.  For heel-strike analysis, start of stance was judged by heel-strike and rapid foot plantar flexion in contact with the ground; for toe-strike analysis, start of stance was judged by observing when the toe struck the ground during plantar flexion. The angle from the point of contact (heel or toe) to the hip, and the angle of the ankle were also computed as part of this analysis. Additional plotting and statistical analyses were completed in \Matlab\ and R \citep{r2020}. 
 
 
