--- a/trombetta.bib
+++ b/trombetta.bib
@@ -41,7 +41,7 @@ doi={10.1088/1748-3182/3/3/034001}
 
 @article{wickham2019tidyverse,
 title = {Welcome to the {tidyverse}},
-author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain Fran{\c{c}}ois and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill M{\:{u}}ller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain Fran{\c{c}}ois and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill M{\"{u}}ller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
 year = {2019},
 journal = {Journal of Open Source Software},
 volume = {4},
@@ -70,3 +70,83 @@ url = {https://www.R-project.org/},
   year = {2008},
   doi = {10.1103/PhysRevE.78.051907},
 }
+
+@article{bell1984quantifying,
+author={Bell, Emily and Denny, Mark},
+year={1984},
+title={Quantifying ``wave exposure'': a simple device for recording maximum velocity and results of its use at several field sites},
+journal={Journal of Experimental Marine Biology and Ecology},
+volume={181},
+pages={9--29}}
+
+@article{denny1983simple,
+author={Denny, Mark W},
+year={1983},
+title={A simple device for measuring the maximum force imposed on intertidal organisms},
+journal={Limnology and Oceanography},
+volume={28},
+number={6},
+pages={1269--1274}}
+
+@article{baker2007history,
+author={Baker, Richard},
+year={2007},
+title={The history of gait analysis before the advent of modern computers},
+journal={Gait and Posture},
+volume={26},
+number={3},
+pages={331--342}}
+
+@book{mcmahon1984muscles,
+author={McMahon, Thomas A},
+year={1984},
+title={Muscles, Reflexes, and Locomotion},
+publisher={Princeton University Press},
+address={Princeton, NJ}}
+
+@article{mayer2010physiological,
+author={Mayer, Andreas},
+year={2010},
+title={The physiological circus: knowing, representing, and training horses in motion in nineteenth century {F}rance},
+journal={Representations},
+volume={111},
+pages={88--120},
+doi={10.1525/rep.2010.111.1.88}}
+
+@article{marey1873locomotion,
+author={Marey, {\'{E}}tienne-Jules},
+year={1873},
+title={De la locomotion terrestre chez lee biped{\`{e}}s et les quadrup{\`{e}des}},
+journal={Journal d'Anatomie et Physiolgie de l'Homme et des Animaux},
+volume={9},
+pages={42--80}}
+
+@book{marey1885method,
+author={Marey, {\'{E}}tienne-Jules},
+year={1885},
+title={La M{\'{e}}thode Graphique dans les Sciences Exp{\'{e}}rimentales},
+address={Paris},
+publisher={G.~Masson}}
+
+@book{muybridge1925animals,
+author={Muybridge, Edward},
+year={1925}
+title={Animals in Motion},
+edition={5th},
+address={London},
+publisher={Chapman \& Hall}}
+
+@book{muybridge1955human,
+author={Muybridge, Edward},
+year={1955},
+title={The Human Figure in Motion},
+address={New York},
+publisher={Dover}}
+
+@article{carlet1872essai,
+author={Carlet, Gaston},
+year={1872},
+title={Essai expe{\'{e}}rimentale sur la locomotion humaine},
+journal={Annales des Sciences Naturelles Zoologie},
+volume={15}}
+
