--- a/trombetta.bib
+++ b/trombetta.bib
@@ -150,3 +150,9 @@ title={Essai expe{\'{e}}rimentale sur la locomotion humaine},
 journal={Annales des Sciences Naturelles Zoologie},
 volume={15}}
 
+@book{craig2011mechanics,
+author={Craig, Jr, Roy},
+year={2011},
+title={Mechanics of Materials},
+edition={3rd},
+publisher={Wiley}}
