--- a/methods.tex
+++ b/methods.tex
@@ -11,6 +11,7 @@ I used a single experimental subject, age \SI{19}{\year}, male, height \SI{5}{\f
 
 
 \subsection{Improvised force plate kymograph}
+% In this section or in intro add citations to bell1984quantifying, denny1983simple, baker2007history, mayer2010physiological, marey1873locomotion, marey1885method, muybridge1925animals, muybridge1955human, carlet1872essai...  
 To measure horizontal and vertical ground reaction forces (GRFs), I originally intended to use a three-axis force plate (9260AA6; Kistler; Novi, MI), however, due to the global COVID-19 pandemic, the equipment was not available. Instead, I improvised a one-axis (vertical only) force plate (\fref{fig:methods:forceplate}) using a flexure made of a \SI{48 x 21 x 0.5}{\inch} sheet of scrap bead board simply supported at the ends between two masonry pavers each \SI{2.25}{\inch} thick. I attached a red dry erase marker (EXPO; Newell Brands; Atlanta, GA) horizontally, pointing laterally, at the midpoint of the flexure, so that the marker would mark a \SI{11x14}{\inch} whiteboard (Staples; Riverdale, NJ) on the right side. 
 \begin{figure}
 \begin{center}
@@ -19,7 +20,7 @@ To measure horizontal and vertical ground reaction forces (GRFs), I originally i
 \caption{Improvised one-axis force plate kymograph}
 \label{fig:methods:forceplate}
 \end{figure}
-The lowest point reached by the marker is a linear measure of the maximum vertical GRF experienced during contact. Additionally, I found that horizontal GRF would displace the flexure horizontally, providing some indication of their general magnitude. \textbf{Add refs to Malet etc, Denny.} For a point load applied in the middle, the displacement $\delta$ (i.e. marker movement) from point load $F$ (i.e. vertical GRF) is given by: % ADD CITATION
+The lowest point reached by the marker is a linear measure of the maximum vertical GRF experienced during contact. Additionally, I found that horizontal GRF would displace the flexure horizontally, providing some indication of their general magnitude. For a point load applied in the middle, the displacement $\delta$ (i.e. marker movement) from point load $F$ (i.e. vertical GRF) is given by \cite{craig2011mechanics}: 
 \begin{equation}
 \delta = \frac{FL^3}{48 EI},
 \label{eq:sensor-response}
@@ -36,6 +37,7 @@ In addition to the rough indication of vertical GRF from the improvised force pl
 
 
 \subsection{Video kinematics on a treadmill}
+% In this section or in intro add citations to baker2007history, mayer2010physiological, marey1873locomotion, marey1885method, muybridge1925animals, muybridge1955human, carlet1872essai... 
 To examine changes in kinematics and gait during the different running styles, I filmed the subject running on a treadmill (Performance 800; TRUE Fitness; St Louis, MO). Ideally I would have used a high speed camera (TS5; Fastec; San Diego, CA), however, COVID-19 required me to improvise. Instead, I used a smartphone camera (iPhone 11; Apple; Cupertino, CA) filming from the left at \SI{1}{\meter} \textbf{FIX}. The camera operated at \SI{30}{\frame\per\second} and \num{1920x1080} pixel resolution. The treadmill was operated at \SI{8}{mph} (\SI{3.6}{\meter\per\second}) for both tests; the subject began running on the treadmill and reached a steady pace before filming.  Two segments were obtained for analysis, \SI{11}{\second} and \SI{13}{\second} in length, for heel-strike and toe-strike styles, providing \SI{358}{\frame} and \SI{416}{\frame}, respectively.
 \begin{figure}
 \begin{center}
@@ -49,7 +51,8 @@ Kinematic analysis proceeded using \citet{hedrick2008software} DLTdv8 (\url{http
 
 Specially written code in \Matlab\ was used to convert the digitized point locations into the joint angles depicted in \fref{fig:methods:kinematics}. Foot angle ($\alpha$) was defined with \ang{0} as anatomically neutral position, positive $\alpha$ as dorsiflexion, and negative $\alpha$ as plantar flexion. The knee angle ($\beta$) was defined with \ang{0} as anatomically neutral position, and positive $\beta$ as knee flexion. Hip angle ($\gamma$) was defined with \ang{0} as anatomically neutral position, positive $\gamma$ as flexion, and negative $\gamma$ as extension. 
 
-In addition to joint angle, phase was recovered using a method based on the Phaser algorithm \citep{revzen2008estimating}, by taking the principal component analysis (PCA) of all the six digitized points' $x$ and $y$ coordinates, then finding the phase angle of the Hilbert transform of the first principal component (PC1). The phase was then adjusted to range from 0 to $2\pi$, with 0 phase corresponding to the beginning of the first recorded stance phase. This allows comparison of each of the \textbf{FILLIN} and \textbf{FILLIN} steps in the heel-strike and toe-strike analysis videos, respectively. Phase calculations were carried out in \Matlab\ and made use of the \lstinline{pca} and \lstinline{hilbert} functions. 
+In addition to joint angle, phase was recovered using a method based on the Phaser algorithm \citep{revzen2008estimating}, by taking the principal component analysis (PCA) of all the six digitized points' $x$ and $y$ coordinates, then finding the phase angle of the Hilbert transform of the first principal component (PC1). The phase was then adjusted to range from 0 to $2\pi$, with 0 phase corresponding to the beginning of the first recorded stance phase. This allows comparison of each of the 17 and 21 steps in the heel-strike and toe-strike analysis videos, respectively. Phase calculations were carried out in \Matlab\ and made use of the \lstinline{pca} and \lstinline{hilbert} functions. 
+% can we get how much of variance covered in PC1,2 components? 
 
 To allow for comparison of stride frequency, stride period, and duty cycle, the videos were reviewed frame by frame in DLTdv8 to identify (1) the start of stance phase based on toe or heel contact; (2) end of stance phase judged by toe liftoff; and (3) toe contact (for heel-strike trials) to aid in length and speed calibration.  For heel-strike analysis, start of stance was judged by heel-strike and rapid foot plantar flexion in contact with the ground; for toe-strike analysis, start of stance was judged by observing when the toe struck the ground during plantar flexion. The angle from the point of contact (heel or toe) to the hip, and the angle of the ankle were also computed as part of this analysis. Additional plotting and statistical analyses were completed in \Matlab\ and R \citep{r2020}. 
 
