--- a/methods.tex
+++ b/methods.tex
@@ -31,7 +31,7 @@ where $E$ is Young's modulus of elasticity, $L$ is the length of the beam, and $
 
 
 \subsection{Measurement of accelerations using a smart phone}
-In addition to the rough indication of vertical GRF from the improvised force plate, I measured accelerations in three axes using a smartphone (iPhone 5s; Apple; Cupertino, CA), centered \SI{10}{\centi\meter} below the navel and held in place with the right hand. I used the \Matlab\ Mobile app (Mathworks; Natick, MA) to log $X$, $Y$, and $Z$ acceleration at a sampling rate of \SI{100}{\hertz}.  Running was conducted moving straight and level on an empty street about two blocks in length. I recorded \SI{45}{\second} samples of steady running using each running style, at a cadence of approximately \SI{150}{steps\per\minute}, timed using the Avril Lavigne song ``Sk8er Boi''. To avoid end effects during start and stop, I used the middle \SI{10}{\second} segment of each recording for analyses of the acceleration of the center of mass. Analysis of the vertical ($Y$) acceleration measurements was carried out \Matlab (Mathworks; Natick, MA) and R \cite{r2020}, including the \lstinline{tidyverse} and \lstinline{ggplot2} libraries \citep{wickham2019tidyverse}. 
+In addition to the rough indication of vertical GRF from the improvised force plate, I measured accelerations in three axes using a smartphone (iPhone 5s; Apple; Cupertino, CA), centered \SI{10}{\centi\meter} below the navel and held in place with the right hand. I used the \Matlab\ Mobile app (Mathworks; Natick, MA) to log $X$, $Y$, and $Z$ acceleration at a sampling rate of \SI{100}{\hertz}.  Running was conducted moving straight and level on an empty street about two blocks in length. I recorded \SI{45}{\second} samples of steady running using each running style, at a cadence of approximately \SI{150}{steps\per\minute}, timed using the Avril Lavigne song ``Sk8er Boi''. To avoid end effects during start and stop, I used the middle \SI{10}{\second} segment of each recording for analyses of the acceleration of the center of mass. Analysis of the vertical ($Y$) acceleration measurements was carried out \Matlab\ (Mathworks; Natick, MA) and R \citep{r2020}, including the \lstinline{tidyverse} and \lstinline{ggplot2} libraries \citep{wickham2019tidyverse}. 
 
 
 
