--- a/trombetta.bib
+++ b/trombetta.bib
@@ -128,17 +128,17 @@ title={La M{\'{e}}thode Graphique dans les Sciences Exp{\'{e}}rimentales},
 address={Paris},
 publisher={G.~Masson}}
 
-@book{muybridge1925animals,
-author={Muybridge, Edward},
-year={1925}
+@book{muybridge1899animals,
+author={Muybridge, Eadweard},
+year={1899},
 title={Animals in Motion},
 edition={5th},
 address={London},
 publisher={Chapman \& Hall}}
 
-@book{muybridge1955human,
-author={Muybridge, Edward},
-year={1955},
+@book{muybridge1901human,
+author={Muybridge, Eadweard},
+year={1901},
 title={The Human Figure in Motion},
 address={New York},
 publisher={Dover}}
