--- a/discussion.tex
+++ b/discussion.tex
@@ -1,2 +1,6 @@
 \section{Discussion}
-Here discuss what your results mean. Are your hypotheses supported or not? Do you have an answer to your overall research question?
+%Here discuss what your results mean. Are your hypotheses supported or not? Do you have an answer to your overall research question?
+
+The data collected provides some evidence that forefoot striking produces a larger force upon pushoff. 
+
+The data in other studies show that heel strikes produce a larger more instantaneous impact causing injuries compared to a slower more spread out force with a forefoot strike. 
