--- a/methods.tex
+++ b/methods.tex
@@ -15,7 +15,7 @@ I used a single experimental subject, age \SI{19}{\year}, male, height \SI{5}{\f
 To measure horizontal and vertical ground reaction forces (GRFs), I originally intended to use a three-axis force plate (9260AA6; Kistler; Novi, MI), however, due to the global COVID-19 pandemic, the equipment was not available. Instead, I improvised a one-axis (vertical only) force plate (\fref{fig:methods:forceplate}) using a flexure made of a \SI{48 x 21 x 0.5}{\inch} sheet of scrap bead board simply supported at the ends between two masonry pavers each \SI{2.25}{\inch} thick. I attached a red dry erase marker (EXPO; Newell Brands; Atlanta, GA) horizontally, pointing laterally, at the midpoint of the flexure, so that the marker would mark a \SI{11x14}{\inch} whiteboard (Staples; Riverdale, NJ) on the right side. 
 \begin{figure}
 \begin{center}
-    \textbf{Fill in.}
+    \textbf{Fill in from slide 6.}
 \end{center}
 \caption{Improvised one-axis force plate kymograph}
 \label{fig:methods:forceplate}
@@ -27,7 +27,8 @@ The lowest point reached by the marker is a linear measure of the maximum vertic
 \end{equation}
 where $E$ is Young's modulus of elasticity, $L$ is the length of the beam, and $I=\frac{1}{12}bh^3$ is the second moment of area; though in practice I simply compared the maximum marker motion rather than perform a detailed calibration of this improvised rig. 
 
-\textbf{How many steps and in what order.} After each trial, the resulting marker pattern on the white board was photographed using a smartphone camera (Iphone 11; Apple; Cupertino, CA) to allow rough comparison of the magnitude of vertical GRF. 
+An initial test of the rig failed due to the grooves in the bead board being loaded in tension; the board was replaced with the grooves facing up and was retested first by walking over it. I then took two trials consisting of five steps of heel-strike followed by five steps of toe-strike. The white board was moved left approximately \SI{1}{\centi\meter} between steps and \SI{5}{\centi\meter} between treatments to provide visible separation. After each trial, the resulting marker pattern on the white board was photographed using a smartphone camera (Iphone 11; Apple; Cupertino, CA) to allow rough comparison of the magnitude of vertical GRF. Toe-strike steps appeared to shift the rig laterally; to examine this further I took a third trial consisting of four steps using toe-strike, alternating left and right feet. 
+
 
 
 
