--- a/results.tex
+++ b/results.tex
@@ -3,6 +3,14 @@
 %Explain factually what you found... leave interpretation of what it means for the final discussion section. Here you would include plots of what you found or comparison tables.
 
 \subsection{Improvised force plate kymograph}
+Heel versus toe-strike two trials. Toe-strike only shows lateral movement of rig, primarily with left foot. 
+\begin{figure}
+\begin{center}
+\textbf{Fill in from slides 11 and 12.}
+\end{center}
+\caption{Improvised force plate recordings of vertical ground reaction force; (a) and (b) trials comparing heel strike and toe strike; (c) checking toe strike.}
+\label{fig:results:forceplate}
+\end{figure}
 
 \subsection{Measurements of acceleration using a smartphone}
 
