--- a/trombetta.tex
+++ b/trombetta.tex
@@ -10,7 +10,7 @@
 \DeclareSIUnit{\inch}{in}
 \DeclareSIUnit{\foot}{ft}
 \DeclareSIUnit{\poundforce}{lbf}
-\DeclareSIUnit{\pound}{lbm}
+\DeclareSIUnit{\pound}{lb}
 \DeclareSIUnit{\frame}{frame}
 \usepackage{graphicx}
 \usepackage[round,authoryear]{natbib}
